# EMS_QI_Projects

./: .gitignore  git-auto-push.sh  requirements.txt  start.sh
ahaems-2025-submission/: .env  .gitignore  README.md  config.py  project_paths.py  pyproject.toml  test.ipynb  test.py
ahaems-2025-submission/notebooks/: ._AHAEMS1_Measure.ipynb  AHAEMS1:  Stroke Pre-Arrival Notifcation.ipynb  AHAEMS1_Measure.ipynb  AHAEMS2:  Documentation of LKW for Patients with Suspected Stroke.ipynb  AHAEMS2_Measure.ipynb  AHAEMS3:  Eval of BG for Patients with Suspected Stroke.ipynb  AHAEMS3_Measure.ipynb  AHAEMS4:  Stroke Screen Performed and Documentated.ipynb  AHAEMS4_Measure.ipynb  AHAEMS5_Measure.ipynb  AHAEMS6_Measure.ipynb  AHAEMS7_Measure.ipynb  AHAEMS_Full_Report.ipynb
ahaems-2025-submission/output/fallouts/: ahaems1_fallouts.csv  ahaems2_fallouts.csv  ahaems3_fallouts.csv  ahaems4_fallouts.csv  ahaems5_fallouts.csv  ahaems6_fallouts.csv  ahaems7_fallouts.csv  ahaems7_fallouts_20250610.csv
ahaems-2025-submission/pdsa_cycle/: ahaems1_report.html  ahaems1_report.qmd
ahaems-2025-submission/scripts/: clean_postgres_ahaems_data.py  create_ahaems_cleaned_view.sql  run_all_cleaning.py  script_01_fix_quotes.py  script_02_normalize_fields.py  script_03_feature_engineering.py  script_04_export_cleaned.py  upsert_csv_to_postgres.py
ems-qi-template/: .gitignore  README.md  requirements.txt
home_projects/: entities.ipynb  network scan.ipynb  network_scan.py
scripts/: app.py
tempstick-dashboard/: Caddyfile  Dockerfile  README.md  docker-compose.yml  requirements.txt
(+18 files in other folders)
