[project]
name = "ahaems-2025-submission"
version = "0.1.0"
description = "AHA EMS Analysis Project"
authors = [
    {name = "johnny",email = "jonathan.dayre.taft@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
