[tool.poetry]
name = "quality"
version = "0.1.0"
description = "AHA EMS Quality Analysis Project"
authors = ["johnny <jonathan.dayre.taft@gmail.com>"]
readme = "README.md"
packages = [{ include = "scripts" }]
# optional: disable packaging mode if not needed
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = ">=2.3.0,<3.0.0"
numpy = ">=2.3.0,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
ipykernel = ">=6.29.5,<7.0.0"
flask = "^3.1.1"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
